--- a/home_fix/authentication/templates/authentication/layout.html
+++ b/home_fix/authentication/templates/authentication/layout.html
@@ -14,6 +14,16 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+    <!-- Fontawesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'authentication/login.css' %}" />
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
