Add Registration UI

--- a/home_fix/authentication/templates/authentication/auth.html
+++ b/home_fix/authentication/templates/authentication/auth.html
@@ -1,5 +1,5 @@
 {% extends "authentication/layout.html" %}
-{% block title %}Auth | Home{% endblock %} 
+{% block title %}Auth | Homefix{% endblock %} 
 {% block body %}
 <h1>Auth Page</h1>
 <a href="{% url 'authentication:login'%}">login</a>
