--- a/home_fix/authentication/templates/authentication/login.html
+++ b/home_fix/authentication/templates/authentication/login.html
@@ -1,6 +1,6 @@
 {% extends "authentication/layout.html" %}
 {% load static %}
-{% block title %}Login{% endblock %} 
+{% block title %}Login | Homefix{% endblock %} 
 {% block body %}
 <section class="vh-100">
     <div class="container py-5 h-100">
@@ -9,49 +9,30 @@
           <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg" class="img-fluid" alt="Phone image">
         </div>
         <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-            <h1 class="mb-4"><strong>Homefix</strong></h1>
+            <h1 class="mb-4"><strong>Welcome Back!</strong></h1>
           <form>
             <!-- Email -->
             <div class="form-outline mb-4">
-              <label class="form-label" for="email">Email address</label>
-              <input type="email" id="email" class="form-control form-control-lg" />
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <label class="form-label" for="email">Email</label>
+              <input type="email" placeholder="Enter Email" id="email" class="form-control form-control" />
             </div>
   
             <!-- Password -->
             <div class="form-outline mb-4">
               <label class="form-label" for="password">Password</label>
-              <input type="password" placeholder="********" id="password" class="form-control form-control-lg" />
-              <div id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long, contain letters and numbers.
-              </div>
+              <input type="password" placeholder="Enter Password" id="password" class="form-control form-control" />
             </div>
-            
-            <!-- Remember Me  -->
-            <!-- <div class="d-flex justify-content-around align-items-center mb-4"> -->
-              <!-- <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  value=""
-                  id="form1Example3"
-                  checked
-                />
-                <label class="form-check-label" for="form1Example3"> Remember me </label>
-              </div> -->
-            <!-- </div> -->
-  
+
+            <!-- Submit button -->
             <button type="submit" class="btn btn-outline-primary mb-4 shadow">Login</button>
           </form> 
             
-            <div class="">
             <a href="#!">Forgot password?</a>
             <p>Don't have an account? <a href="{% url 'authentication:register'%}">Register</a></p>
-            </div>
 
-            <hr class="my-4">
+            <hr class="my-3">
             
-            <div class="d-grid gap-3">
+            <div class="d-grid gap-3 col-6 mx-auto">
             <a class="btn btn-primary btn-lg btn-block shadow" style="background-color: #3b5998" href="#!" role="button">
               <i class="fab fa-facebook-f me-2"></i>Login with Meta
             </a>
