--- a/home_fix/authentication/templates/authentication/register.html
+++ b/home_fix/authentication/templates/authentication/register.html
@@ -1,6 +1,80 @@
 {% extends "authentication/layout.html" %}
-{% block title %}Register{% endblock %} 
+{% block title %}Register | Homefix{% endblock %} 
 {% block body %}
-<h1>Register Page</h1>
-<a href="{% url 'authentication:auth'%}">return to the home page</a>
+<section class="vh-100">
+    <div class="container py-5 h-100">
+      <div class="row d-flex align-items-center justify-content-center h-100">
+        <div class="col-md-8 col-lg-7 col-xl-6">
+            <img src="https://i.ibb.co/gyNd6Jp/undraw-My-password-re-ydq7-1.png" alt="undraw-My-password-re-ydq7-1" border="0">
+        </div>
+        <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+            <h1 class="mb-4"><strong>Create an account</strong></h1>
+          <form>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <input type="text" placeholder="First Name" id="firstname" class="form-control form-control" />
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <input type="text" placeholder="Last Name" id="lastname" class="form-control form-control" />
+                  </div>
+                </div>
+            </div>
+
+            <!-- Email -->
+            <div class="form-outline mb-3">
+              <input type="email" placeholder="Enter Email" id="email" class="form-control form-control" />
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+
+            <!-- Gender -->
+            <div class="form-outline mb-3">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="gender" id="male" value="male">
+                <label class="form-check-label" for="inlineRadio1">Male</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="gender" id="female" value="female">
+                <label class="form-check-label" for="inlineRadio2">Female</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="gender" id="other" value="other">
+                <label class="form-check-label" for="inlineRadio3">Other</label>
+            </div>
+            </div>
+  
+            <!-- Password -->
+            <div class="form-outline mb-4">
+              <input type="password" placeholder="Enter Password" id="password" class="form-control form-control" />
+            </div>
+
+            <div class="form-outline mb-3">
+                <input type="password" placeholder="Re-type Password" id="password" class="form-control form-control" />
+                <div id="passwordHelpBlock" class="form-text">
+                    Your password must be 8-20 characters long, contain letters and numbers.
+                  </div>
+            </div>
+
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-outline-warning mb-3 shadow">Register</button>
+          </form> 
+            
+            <p>Already have an account? <a href="{% url 'authentication:login'%}">Login</a></p>
+
+            <hr class="my-3">
+            
+            <div class="d-grid gap-3 col-6 mx-auto">
+            <a class="btn btn-primary btn-lg btn-block shadow" style="background-color: #3b5998" href="#!" role="button">
+              <i class="fab fa-facebook-f me-2"></i>Continue with Meta
+            </a>
+            <a class="btn btn-light btn-lg btn-block shadow" href="#!" role="button">
+                <i class="fa-brands fa-google"></i> Continue with Google</a>
+            </div>
+  
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
