--- a/home_fix/authentication/templates/authentication/login.html
+++ b/home_fix/authentication/templates/authentication/login.html
@@ -10,19 +10,24 @@
         </div>
         <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
             <h1 class="mb-4"><strong>Welcome Back!</strong></h1>
-          <form>
+          <form  method="POST" action="">
+            {% csrf_token %}
             <!-- Email -->
             <div class="form-outline mb-4">
               <label class="form-label" for="email">Email</label>
-              <input type="email" placeholder="Enter Email" id="email" class="form-control form-control" />
+              <input type="email" placeholder="Enter Email" name="email" id="email" class="form-control form-control" />
             </div>
   
             <!-- Password -->
             <div class="form-outline mb-4">
               <label class="form-label" for="password">Password</label>
-              <input type="password" placeholder="Enter Password" id="password" class="form-control form-control" />
+              <input type="password" placeholder="Enter Password" name="password" id="password" class="form-control form-control" />
             </div>
-
+            <div class="text-center">
+              {% if form.errors %}
+              <p>Username or password not correct</p>
+              {% endif %}
+            </div>
             <!-- Submit button -->
             <button type="submit" class="btn btn-outline-primary mb-4 shadow">Login</button>
           </form> 
