--- a/home_fix/authentication/templates/authentication/homepage.html
+++ b/home_fix/authentication/templates/authentication/homepage.html
@@ -1,37 +1,38 @@
 {% extends "authentication/layout.html" %}
-{% block title %}Auth | Homefix{% endblock %} 
+{% block title %}Auth | Homefix{% endblock %}
 {% block body %}
-<!-- Nav bar -->
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="False" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        {% if user.is_authenticated %}
-        
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'authentication:logout'%}">Logout</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Welcome, {{user.username}}</a>
-        </li>
-  
-        {% else %}
-  
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'authentication:login'%}">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'authentication:register'%}">Register</a>
-        </li>
-  
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
-<h1>Auth Page</h1>
-<p>Hello!!</p>
+    <!-- Nav bar -->
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="False" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                {% if user.is_authenticated %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'authentication:logout' %}">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
+                    </li>
+
+                {% else %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'authentication:login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'authentication:register' %}">Register</a>
+                    </li>
+
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+    <h1>Auth Page</h1>
+    <p>Hello!!</p>
 {% endblock %}
