--- a/home_fix/authentication/templates/authentication/layout.html
+++ b/home_fix/authentication/templates/authentication/layout.html
@@ -21,6 +21,9 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
 
+    <!-- Axios CDN -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'authentication/login.css' %}"/>
 
