Resolve registration page bug

--- a/home_fix/authentication/templates/authentication/login.html
+++ b/home_fix/authentication/templates/authentication/login.html
@@ -17,14 +17,14 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="email">Email</label>
                             <input type="email" placeholder="Enter Email" name="email" id="email"
-                                   class="form-control form-control"/>
+                                   class="form-control form-control" required/>
                         </div>
 
                         <!-- Password -->
                         <div class="form-outline mb-4">
                             <label class="form-label" for="password">Password</label>
                             <input type="password" placeholder="Enter Password" name="password" id="password"
-                                   class="form-control form-control"/>
+                                   class="form-control form-control" required/>
                         </div>
                         {% if error %}
                             <div class="btn-outline-primary mb-4">
