--- a/home_fix/authentication/templates/authentication/layout.html
+++ b/home_fix/authentication/templates/authentication/layout.html
@@ -27,6 +27,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'authentication/login.css' %}"/>
 
+    {% block head %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
