--- a/home_fix/authentication/templates/authentication/login.html
+++ b/home_fix/authentication/templates/authentication/login.html
@@ -27,7 +27,7 @@
                                    class="form-control form-control" required/>
                         </div>
                         {% if error %}
-                            <div class="btn-outline-primary mb-4">
+                            <div class="btn-outline-danger mb-4">
                                 {{ error }}
                             </div>
                         {% endif %}
