--- a/home_fix/authentication/templates/authentication/login.html
+++ b/home_fix/authentication/templates/authentication/login.html
@@ -21,10 +21,13 @@
                         </div>
 
                         <!-- Password -->
-                        <div class="form-outline mb-4">
-                            <label class="form-label" for="password">Password</label>
+                        <label class="form-label" for="password">Password</label>
+                        <div class="input-group form-outline mb-4">
                             <input type="password" placeholder="Enter Password" name="password" id="password"
                                    class="form-control form-control" required/>
+                            <button class="btn btn-outline-primary" type="button" onclick="toggle()">
+                                <i class="fa-solid fa-eye-slash" id="eye"></i>
+                            </button>
                         </div>
                         {% if error %}
                             <div class="btn-outline-danger mb-4">
@@ -53,4 +56,21 @@
             </div>
         </div>
     </section>
+    <script>
+        var state = false;
+        function toggle() {
+            eye_icon = document.getElementById("eye");
+            if(state) {
+                document.getElementById("password").setAttribute("type", "password");
+                eye_icon.classList.remove("fa-eye");
+                eye_icon.classList.add("fa-eye-slash");
+                state = false;
+            } else {
+                document.getElementById("password").setAttribute("type", "text");
+                eye_icon.classList.remove("fa-eye-slash");
+                eye_icon.classList.add("fa-eye");
+                state = true;
+            }
+        }
+    </script>
 {% endblock %}
