--- a/home_fix/authentication/templates/authentication/register.html
+++ b/home_fix/authentication/templates/authentication/register.html
@@ -51,15 +51,18 @@
                         <!-- Gender -->
                         <div class="form-outline mb-3">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="gender" id="male" value="male" required>
+                                <input class="form-check-input" type="radio" name="gender" id="male" value="male"
+                                       required>
                                 <label class="form-check-label" for="inlineRadio1">Male</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="gender" id="female" value="female" required>
+                                <input class="form-check-input" type="radio" name="gender" id="female" value="female"
+                                       required>
                                 <label class="form-check-label" for="inlineRadio2">Female</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="gender" id="other" value="other" required>
+                                <input class="form-check-input" type="radio" name="gender" id="other" value="other"
+                                       required>
                                 <label class="form-check-label" for="inlineRadio3">Other</label>
                             </div>
                         </div>
@@ -69,13 +72,21 @@
                             </div>
                         {% endif %}
                         <!-- Password -->
-                        <div class="form-outline mb-4">
-                            <input type="password" placeholder="Enter Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" id="password1" name="password1"
+                        <div class="input-group form-outline mb-4">
+                            <input type="password" placeholder="Enter Password"
+                                   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" id="password1" name="password1"
                                    class="form-control form-control" required/>
+                            <button class="btn btn-outline-primary" type="button" onclick="toggle1()">
+                                <i class="fa-solid fa-eye-slash" id="eye1"></i>
+                            </button>
                         </div>
-                        <div class="form-outline mb-3">
-                            <input type="password" placeholder="Re-type Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"  id="password2" name="password2"
+                        <div class="input-group form-outline mb-3">
+                            <input type="password" placeholder="Re-type Password"
+                                   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" id="password2" name="password2"
                                    class="form-control form-control" required/>
+                            <button class="btn btn-outline-primary" type="button" onclick="toggle2()">
+                                <i class="fa-solid fa-eye-slash" id="eye2"></i>
+                            </button>
                             <div id="passwordHelpBlock" class="form-text">
                                 Your password must be 8-20 characters long, contain letters and numbers.
                             </div>
@@ -105,4 +116,38 @@
             </div>
         </div>
     </section>
+    <script>
+        var state1 = false;
+        var state2 = false;
+
+        function toggle1() {
+            let eye_icon = document.getElementById("eye1");
+            if (state1) {
+                document.getElementById("password1").setAttribute("type", "password");
+                eye_icon.classList.remove("fa-eye");
+                eye_icon.classList.add("fa-eye-slash");
+                state1 = false;
+            } else {
+                document.getElementById("password1").setAttribute("type", "text");
+                eye_icon.classList.remove("fa-eye-slash");
+                eye_icon.classList.add("fa-eye");
+                state1 = true;
+            }
+        }
+
+        function toggle2() {
+            let eye_icon = document.getElementById("eye2");
+            if (state2) {
+                document.getElementById("password2").setAttribute("type", "password");
+                eye_icon.classList.remove("fa-eye");
+                eye_icon.classList.add("fa-eye-slash");
+                state2 = false;
+            } else {
+                document.getElementById("password2").setAttribute("type", "text");
+                eye_icon.classList.remove("fa-eye-slash");
+                eye_icon.classList.add("fa-eye");
+                state2 = true;
+            }
+        }
+    </script>
 {% endblock %}
