--- a/home_fix/authentication/templates/authentication/set_location.html
+++ b/home_fix/authentication/templates/authentication/set_location.html
@@ -1,6 +1,7 @@
 {% extends "authentication/layout.html" %}
 {% block title %}Set Location | Homefix{% endblock %}
 {% block body %}
+<p>Thank you for Verifing your Email!</p>
 <div class="container my-5">
     <div class="row height d-flex justify-content-center align-items-center">
         <div class="col-md-6">
