Update Email Body

--- a/home_fix/authentication/templates/authentication/acc_active_email.html
+++ b/home_fix/authentication/templates/authentication/acc_active_email.html
@@ -1,5 +1,5 @@
 Hi {{ user.username }},
-   Please verify your account by clicking on this link: http://{{ domain }}{% url 'authentication:activate' uidb64=uid token=token %}.
+   Please verify your account by clicking on this link: {{ domain }}{% url 'authentication:activate' uidb64=uid token=token %}.
 
    Thank you.
 
