--- a/home_fix/authentication/templates/authentication/set_location.html
+++ b/home_fix/authentication/templates/authentication/set_location.html
@@ -1,88 +1,107 @@
 {% extends "authentication/layout.html" %}
 {% block title %}Set Location | Homefix{% endblock %}
 {% block body %}
-<p>Thank you for Verifing your Email!</p>
-<div class="container my-5">
-    <div class="row height d-flex justify-content-center align-items-center">
-        <div class="col-md-6">
-            <div class="form">
-                <div class="input-group mb-3 shadow">
-                    <input type="text" id="search_location" class="form-control form-input"
-                           placeholder="Search location">
-                    <button class="btn btn-outline-primary" type="button" id="search"><i class="fas fa-search"></i>
-                    </button>
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <img src="..." class="rounded me-2" alt="...">
+                <strong class="me-auto">Bootstrap</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                Hurray! Account Verified!!
+            </div>
+        </div>
+    </div>
+    <div class="container my-5">
+        <div class="row height d-flex justify-content-center align-items-center">
+            <div class="col-md-6">
+                <div class="form">
+                    <div class="input-group mb-3 shadow">
+                        <input type="text" id="search_location" class="form-control form-input"
+                               placeholder="Search location">
+                        <button class="btn btn-outline-primary" type="button" id="search"><i class="fas fa-search"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<form id="switcher" style="margin: 0 auto; width: 500px" action="{% url 'authentication:set_location' user_id %}" method="post">
-    <input hidden id="lat" name="lat">
-    <input hidden id="long" name="long">
-    {% csrf_token %}
-    <!-- Row 1: Address -->
-    <div class="form-outline mb-4">
-        <label class="form-label" for="address">Address</label>
-        <input type="text" id="address" name="street" class="form-control"/>
-    </div>
-    <!-- Row 2: State and Postal Code -->
-    <div class="row mb-4">
-        <div class="col">
-            <div class="form-outline">
-                <label class="form-label" for="state">State</label>
-                <input type="text" id="state" name="state" class="form-control"/>
+    <form id="switcher" style="margin: 0 auto; width: 500px" action="{% url 'authentication:set_location' user_id %}"
+          method="post">
+        <input hidden id="lat" name="lat">
+        <input hidden id="long" name="long">
+        {% csrf_token %}
+        <!-- Row 1: Address -->
+        <div class="form-outline mb-4">
+            <label class="form-label" for="address">Address</label>
+            <input type="text" id="address" name="street" class="form-control"/>
+        </div>
+        <!-- Row 2: State and Postal Code -->
+        <div class="row mb-4">
+            <div class="col">
+                <div class="form-outline">
+                    <label class="form-label" for="state">State</label>
+                    <input type="text" id="state" name="state" class="form-control"/>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-outline">
+                    <label class="form-label" for="postalcode">Post Code</label>
+                    <input type="text" id="postalcode" name="zip" class="form-control"/>
+                </div>
             </div>
         </div>
-        <div class="col">
-            <div class="form-outline">
-                <label class="form-label" for="postalcode">Post Code</label>
-                <input type="text" id="postalcode" name="zip" class="form-control"/>
-            </div>
+        <!-- Row 3: Country -->
+        <div class="form-outline mb-4">
+            <label class="form-label" for="country">Country</label>
+            <input type="text" id="country" name="country" class="form-control"/>
         </div>
-    </div>
-    <!-- Row 3: Country -->
-    <div class="form-outline mb-4">
-        <label class="form-label" for="country">Country</label>
-        <input type="text" id="country" name="country" class="form-control"/>
-    </div>
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-outline-primary btn-block mb-4 shadow">Update</button>
-</form>
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-outline-primary btn-block mb-4 shadow">Update</button>
+    </form>
 
-<script>
-    document.getElementById("switcher").style.display = "none";
+    <script>
+        // Push notification
+        window.onload = (event) => {
+            let toastExample = document.getElementById('toast');
+            let toast = new bootstrap.Toast(toastExample)
+            toast.show()
+        }
 
-    //Google Location Autosearch
-    function initMap() {
-        var input = document.getElementById('search_location');
-        var autocomplete = new google.maps.places.Autocomplete(input)
-    }
+        document.getElementById("switcher").style.display = "none";
 
-    //Fetch address components from the selected location
-    var search_button = document.getElementById("search")
-    search_button.addEventListener("click", function () {
-        axios.get('https://maps.googleapis.com/maps/api/geocode/json', {
-            params: {
-                address: document.getElementById("search_location").value,
-                key: 'AIzaSyA1REQSuSVU372fX246ZMlahmJyg53GSno'
-            }
-        }).then(function (response) {
-            var address_components = response.data.results[0].address_components
-            var geo = response.data.results[0].geometry
-            document.getElementById('address').value = address_components[0].long_name + ' ' + address_components[1].long_name
-            document.getElementById('state').value = address_components[5].long_name
-            document.getElementById('postalcode').value = address_components[7].long_name
-            document.getElementById('country').value = address_components[6].long_name
-            document.getElementById('lat').value = geo.location.lat
-            document.getElementById('long').value = geo.location.lng
+        //Google Location Autosearch
+        function initMap() {
+            var input = document.getElementById('search_location');
+            var autocomplete = new google.maps.places.Autocomplete(input)
+        }
 
-        }).catch(function (error) {
-            console.log(error);
+        //Fetch address components from the selected location
+        var search_button = document.getElementById("search")
+        search_button.addEventListener("click", function () {
+            axios.get('https://maps.googleapis.com/maps/api/geocode/json', {
+                params: {
+                    address: document.getElementById("search_location").value,
+                    key: 'AIzaSyA1REQSuSVU372fX246ZMlahmJyg53GSno'
+                }
+            }).then(function (response) {
+                var address_components = response.data.results[0].address_components
+                var geo = response.data.results[0].geometry
+                document.getElementById('address').value = address_components[0].long_name + ' ' + address_components[1].long_name
+                document.getElementById('state').value = address_components[5].long_name
+                document.getElementById('postalcode').value = address_components[7].long_name
+                document.getElementById('country').value = address_components[6].long_name
+                document.getElementById('lat').value = geo.location.lat
+                document.getElementById('long').value = geo.location.lng
+
+            }).catch(function (error) {
+                console.log(error);
+            });
+            document.getElementById("switcher").style.display = "block";
         });
-        document.getElementById("switcher").style.display = "block";
-    });
-</script>
-<script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1REQSuSVU372fX246ZMlahmJyg53GSno&libraries=places&callback=initMap"></script>
+    </script>
+    <script async
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1REQSuSVU372fX246ZMlahmJyg53GSno&libraries=places&callback=initMap"></script>
 {% endblock %}
