Add homefix logo in toast

--- a/home_fix/authentication/templates/authentication/set_location.html
+++ b/home_fix/authentication/templates/authentication/set_location.html
@@ -5,7 +5,7 @@
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
         <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
             <div class="toast-header">
-                <img src="..." class="rounded me-2" alt="...">
+                <i class="fa-solid fa-screwdriver-wrench"></i>
                 <strong class="me-auto">Homefix</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
