--- a/home_fix/authentication/templates/authentication/homepage.html
+++ b/home_fix/authentication/templates/authentication/homepage.html
@@ -32,7 +32,7 @@
                         </a>
                         <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                             <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'authentication:profile' %}">Profile</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
