Forgot Password Feature

--- a/home_fix/authentication/templates/authentication/login.html
+++ b/home_fix/authentication/templates/authentication/login.html
@@ -39,7 +39,7 @@
                         <button type="submit" class="btn btn-outline-primary mb-4 shadow">Login</button>
                     </form>
 
-                    <a href="#!">Forgot password?</a>
+                    <a href="{% url 'password_reset' %}">Forgot password?</a>
                     <p>Don't have an account? <a href="{% url 'authentication:register' %}">Register</a></p>
 
                     <hr class="my-3">
