--- a/home_fix/authentication/templates/authentication/profile_editor.html
+++ b/home_fix/authentication/templates/authentication/profile_editor.html
@@ -1,81 +1,254 @@
 {% extends "authentication/layout.html" %}
+{% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'authentication/features.css' %}"/>
+{% endblock %}
 {% block title %}Editor | Homefix{% endblock %}
 {% block body %}
-<section>
-    <div id="content-main">
-        <form method="post" id="customuser_form" action="{% url 'authentication:profile_editor'%}">
-            {% csrf_token %}
-            <div>
-                <fieldset class="module aligned ">
-                    <div class="form-row field-first_name">
-                        <div>
-                            <label for="first_name">First name:</label>
-                            <input type="text" name="first_name" value="{{user.first_name}}" class="vTextField"
-                                   maxlength="128"
-                                   id="first_name">
-                        </div>
+    {# Navbar #}
+    <header class="p-3 bg-dark text-white shadow p-3 mb-5">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a class="navbar-brand" href="{% url 'authentication:index' %}" style="color: white;">
+                    <strong><i class="fa-solid fa-screwdriver-wrench"></i> Homefix</strong>
+                </a>
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                </ul>
+
+                {% if user.is_authenticated %}
+
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                        <input type="search" class="form-control form-control-dark" placeholder="Search..."
+                               aria-label="Search">
+                    </form>
+
+                    <div class="dropdown text-end">
+                        <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
+                           id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
+                                 class="rounded-circle">
+                        </a>
+                        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="{% url 'authentication:profile' %}">Profile</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'authentication:logout' %}">
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i> Logout
+                            </a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="form-row field-last_name">
-                        <div>
-                            <label for="last_name">Last name:</label>
-                            <input type="text" name="last_name" value="{{user.last_name}}" class="vTextField"
-                                   maxlength="128"
-                                   id="last_name">
-                        </div>
+
+                {% else %}
+
+                    <div class="text-end">
+                        <button type="button" class="btn btn-outline-light me-2"
+                                onclick="location.href='{% url 'authentication:login' %}'">Login
+                        </button>
+                        <button type="button" class="btn btn-warning"
+                                onclick="location.href='{% url 'authentication:register' %}'">Sign-up
+                        </button>
                     </div>
-                    <div class="form-row field-email">
-                        <div>
-                            <label class="required" for="email">Email address:</label>
-                            <input type="email" name="email" value="{{user.email}}" class="vTextField"
-                                   maxlength="254" required="" id="email" disabled>
-                        </div>
-                    </div>
-                    <div class="form-row field-gender">
-                        <div>
-                            <label for="gender">Gender:</label>
-                            <select name="gender" id="gender">
-                                {% if user.gender == 'male' %}
-                                <option value="male" selected>male</option>
-                                <option value="female">female</option>
-                                {% elif user.gender == 'female' %}
-                                <option value="male">male</option>
-                                <option value="female" selected>female</option>
-                                {% else %}
-                                <option value="" selected disabled hidden>Choose Here</option>
-                                <option value="male">male</option>
-                                <option value="female">female</option>
-                                {% endif %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-row field-street">
-                        <div>
-                            <label for="id_street">Street:</label>
-                            <input type="text" name="street"  value="{{user.street}}" class="vTextField" maxlength="64" id="id_street">
-                        </div>
-                    </div>
-                    <div class="form-row field-state">
-                        <div>
-                            <label for="id_state">State:</label>
-                            <input type="text" name="state" value="{{user.state}}" class="vTextField" maxlength="64" id="id_state">
-                        </div>
-                    </div>
-                    <div class="form-row field-country">
-                        <div>
-                            <label for="id_country">Country:</label>
-                            <input type="text" name="country" value="{{user.country}}" class="vTextField" maxlength="64" id="id_country">
-                        </div>
-                    </div>
-                     <div class="form-row field-zip">
-                        <div>
-                            <label for="id_zip">Zip Code:</label>
-                            <input type="text" name="zip" class="vTextField" value="{{user.zip}}" maxlength="64" id="id_zip">
-                        </div>
-                    </div>
-                </fieldset>
+
+                {% endif %}
             </div>
-            <button type="submit">submit</button>
-        </form>
-    </div>
-</section>
+        </div>
+    </header>
+
+    {# Form  #}
+
+    {#    <div class="container">#}
+    {#        <h1>Edit Profile</h1>#}
+    {#        <hr>#}
+    {#        <div class="row">#}
+    {#            <!-- left column -->#}
+    {#            <div class="col-md-3">#}
+    {#                <div class="text-center">#}
+    {#                    <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">#}
+    {#                    <h6>Upload a different photo...</h6>#}
+    {##}
+    {#                    <input type="file" class="form-control">#}
+    {#                </div>#}
+    {#            </div>#}
+    {##}
+    {#            <!-- edit form column -->#}
+    {#            <div class="col-md-9 personal-info">#}
+    {#                <div class="alert alert-info alert-dismissable">#}
+    {#                    <a class="panel-close close" data-dismiss="alert">×</a>#}
+    {#                    <i class="fa fa-coffee"></i>#}
+    {#                    This is an <strong>.alert</strong>. Use this to show important messages to the user.#}
+    {#                </div>#}
+    {#                <h3>Personal info</h3>#}
+    {##}
+    {#                <form class="form-horizontal" role="form">#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-lg-3 control-label">First name:</label>#}
+    {#                        <div class="col-lg-8">#}
+    {#                            <input class="form-control" type="text" value="Jane">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-lg-3 control-label">Last name:</label>#}
+    {#                        <div class="col-lg-8">#}
+    {#                            <input class="form-control" type="text" value="Bishop">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-lg-3 control-label">Company:</label>#}
+    {#                        <div class="col-lg-8">#}
+    {#                            <input class="form-control" type="text" value="">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-lg-3 control-label">Email:</label>#}
+    {#                        <div class="col-lg-8">#}
+    {#                            <input class="form-control" type="text" value="janesemail@gmail.com">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-lg-3 control-label">Time Zone:</label>#}
+    {#                        <div class="col-lg-8">#}
+    {#                            <div class="ui-select">#}
+    {#                                <select id="user_time_zone" class="form-control">#}
+    {#                                    <option value="Hawaii">(GMT-10:00) Hawaii</option>#}
+    {#                                    <option value="Alaska">(GMT-09:00) Alaska</option>#}
+    {#                                    <option value="Pacific Time (US &amp; Canada)">(GMT-08:00) Pacific Time (US &amp;#}
+    {#                                        Canada)#}
+    {#                                    </option>#}
+    {#                                    <option value="Arizona">(GMT-07:00) Arizona</option>#}
+    {#                                    <option value="Mountain Time (US &amp; Canada)">(GMT-07:00) Mountain Time (US &amp;#}
+    {#                                        Canada)#}
+    {#                                    </option>#}
+    {#                                    <option value="Central Time (US &amp; Canada)" selected="selected">(GMT-06:00)#}
+    {#                                        Central Time (US &amp; Canada)#}
+    {#                                    </option>#}
+    {#                                    <option value="Eastern Time (US &amp; Canada)">(GMT-05:00) Eastern Time (US &amp;#}
+    {#                                        Canada)#}
+    {#                                    </option>#}
+    {#                                    <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>#}
+    {#                                </select>#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-md-3 control-label">Username:</label>#}
+    {#                        <div class="col-md-8">#}
+    {#                            <input class="form-control" type="text" value="janeuser">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-md-3 control-label">Password:</label>#}
+    {#                        <div class="col-md-8">#}
+    {#                            <input class="form-control" type="password" value="11111122333">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-md-3 control-label">Confirm password:</label>#}
+    {#                        <div class="col-md-8">#}
+    {#                            <input class="form-control" type="password" value="11111122333">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                    <div class="form-group">#}
+    {#                        <label class="col-md-3 control-label"></label>#}
+    {#                        <div class="col-md-8">#}
+    {#                            <input type="button" class="btn btn-primary" value="Save Changes">#}
+    {#                            <span></span>#}
+    {#                            <input type="reset" class="btn btn-default" value="Cancel">#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                </form>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#    </div>#}
+    {#    <hr>#}
+
+
+    {#    <section>#}
+    {#        <div id="content-main">#}
+    {#            <form method="post" id="customuser_form" action="{% url 'authentication:profile_editor' %}">#}
+    {#                {% csrf_token %}#}
+    {#                <div>#}
+    {#                    <fieldset class="module aligned ">#}
+    {#                        <div class="form-row field-first_name">#}
+    {#                            <div>#}
+    {#                                <label for="first_name">First name:</label>#}
+    {#                                <input type="text" name="first_name" value="{{ user.first_name }}" class="vTextField"#}
+    {#                                       maxlength="128"#}
+    {#                                       id="first_name">#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-last_name">#}
+    {#                            <div>#}
+    {#                                <label for="last_name">Last name:</label>#}
+    {#                                <input type="text" name="last_name" value="{{ user.last_name }}" class="vTextField"#}
+    {#                                       maxlength="128"#}
+    {#                                       id="last_name">#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-email">#}
+    {#                            <div>#}
+    {#                                <label class="required" for="email">Email address:</label>#}
+    {#                                <input type="email" name="email" value="{{ user.email }}" class="vTextField"#}
+    {#                                       maxlength="254" required="" id="email" disabled>#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-gender">#}
+    {#                            <div>#}
+    {#                                <label for="gender">Gender:</label>#}
+    {#                                <select name="gender" id="gender">#}
+    {#                                    {% if user.gender == 'male' %}#}
+    {#                                        <option value="male" selected>male</option>#}
+    {#                                        <option value="female">female</option>#}
+    {#                                    {% elif user.gender == 'female' %}#}
+    {#                                        <option value="male">male</option>#}
+    {#                                        <option value="female" selected>female</option>#}
+    {#                                    {% else %}#}
+    {#                                        <option value="" selected disabled hidden>Choose Here</option>#}
+    {#                                        <option value="male">male</option>#}
+    {#                                        <option value="female">female</option>#}
+    {#                                    {% endif %}#}
+    {#                                </select>#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-street">#}
+    {#                            <div>#}
+    {#                                <label for="id_street">Street:</label>#}
+    {#                                <input type="text" name="street" value="{{ user.street }}" class="vTextField"#}
+    {#                                       maxlength="64" id="id_street">#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-state">#}
+    {#                            <div>#}
+    {#                                <label for="id_state">State:</label>#}
+    {#                                <input type="text" name="state" value="{{ user.state }}" class="vTextField"#}
+    {#                                       maxlength="64" id="id_state">#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-country">#}
+    {#                            <div>#}
+    {#                                <label for="id_country">Country:</label>#}
+    {#                                <input type="text" name="country" value="{{ user.country }}" class="vTextField"#}
+    {#                                       maxlength="64" id="id_country">#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                        <div class="form-row field-zip">#}
+    {#                            <div>#}
+    {#                                <label for="id_zip">Zip Code:</label>#}
+    {#                                <input type="text" name="zip" class="vTextField" value="{{ user.zip }}" maxlength="64"#}
+    {#                                       id="id_zip">#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                    </fieldset>#}
+    {#                </div>#}
+    {#                <button type="submit">submit</button>#}
+    {#            </form>#}
+    {#        </div>#}
+    {#    </section>#}
 {% endblock %}
