--- a/home_fix/authentication/templates/authentication/locs_hardware.html
+++ b/home_fix/authentication/templates/authentication/locs_hardware.html
@@ -52,7 +52,7 @@
 
 
 </script>
-<h3>My Google Maps Demo</h3>
+<h3>Near by Hardware Stores</h3>
 <div id="map"></div>
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5T-eiKa6XvYLkvOV00GYiCKTcFyeUOnE&callback=initMap&libraries=places&v=weekly"
