--- a/home_fix/authentication/templates/authentication/homepage.html
+++ b/home_fix/authentication/templates/authentication/homepage.html
@@ -1,7 +1,7 @@
 {% extends "authentication/layout.html" %}
 {% load static %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'authentication/hero.css' %}"/>
+<!--    <link rel="stylesheet" href="{% static 'authentication/hero.css' %}"/>-->
 {% endblock %}
 {% block title %}Home | Homefix{% endblock %}
 {% block body %}
